Completion feature: - User greeting - Dialog set location - Navigate & passing user location data on click search view - Navigate to search screen from input box

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -120,7 +120,9 @@
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusTopStart="8dp">
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxStrokeColor="@color/green_40"
+            app:hintTextColor="@color/green_40">
 
             <AutoCompleteTextView
                 android:id="@+id/auto_text_type"
