--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -106,6 +106,8 @@
         <item name="boxCornerRadiusBottomStart">8dp</item>
         <item name="boxCornerRadiusTopEnd">8dp</item>
         <item name="boxCornerRadiusTopStart">8dp</item>
+        <item name="boxStrokeColor">@color/green_40</item>
+        <item name="hintTextColor">@color/green_40</item>
     </style>
 
 </resources>
