--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,7 +1,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingHorizontal="12dp"
+    android:paddingVertical="16dp"
     android:text="@string/user_type"
     android:textColor="@color/black"
-    android:textSize="14sp" />
+    android:textSize="12sp" />
