--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,9 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:clipToPadding="false"
         android:clipChildren="false"
+        android:clipToPadding="false"
+        android:orientation="vertical"
         android:padding="24dp">
 
         <ImageView
@@ -41,9 +41,10 @@
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view_organizer"
+            style="@style/SearchViewStyle"
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_custom_input"
-            style="@style/SearchViewStyle"
+            android:inputType="none"
             android:theme="@style/SearchViewStyle"
             app:iconifiedByDefault="false"
             app:queryHint="@string/search_organizer" />
