--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_logo"
+        android:contentDescription="@string/app_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,10 +30,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/illus_login"
         android:src="@drawable/illus_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_login"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_login" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_email"
@@ -48,10 +50,10 @@
             android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/grey_60"
             android:fontFamily="@font/roboto_regular"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
+            android:textColorHint="@color/grey_60"
             android:textSize="12sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +79,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/materialButton"
         style="@style/Button"
@@ -90,9 +91,9 @@
     <TextView
         android:id="@+id/tv_dont_have_acc"
         style="@style/TextBody"
-        android:textColor="@color/grey_20"
         android:layout_marginTop="16dp"
         android:text="@string/notHaveAccount"
+        android:textColor="@color/grey_20"
         app:layout_constraintStart_toStartOf="@+id/materialButton"
         app:layout_constraintTop_toBottomOf="@+id/materialButton" />
 
@@ -104,7 +105,7 @@
         android:textColor="@color/green_20"
         app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_acc"
         app:layout_constraintStart_toEndOf="@+id/tv_dont_have_acc"
-        app:layout_constraintTop_toTopOf="@+id/tv_dont_have_acc"/>
+        app:layout_constraintTop_toTopOf="@+id/tv_dont_have_acc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
