--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -54,6 +54,9 @@
         <action
             android:id="@+id/action_searchFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <!--suppress NavigationFile -->
+        <argument android:name="location"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/listQurbanFragment"
