--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/statusQurbanFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -85,5 +85,9 @@
         android:id="@+id/homeContainerFragment"
         android:name="com.dicoding.qurbanin.ui.home.HomeContainerFragment"
         android:label="fragment_home_container"
-        tools:layout="@layout/fragment_home_container" />
+        tools:layout="@layout/fragment_home_container" >
+        <action
+            android:id="@+id/action_homeContainerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
