Tyding up the code and making small changes

--- a/app/src/main/res/layout/item_dialog_search_organizer.xml
+++ b/app/src/main/res/layout/item_dialog_search_organizer.xml
@@ -54,6 +54,7 @@
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxStrokeColor="@color/green_40"
+                app:cursorColor="@color/green_40"
                 app:endIconTint="@color/green_40"
                 app:errorEnabled="true"
                 app:hintAnimationEnabled="false"
@@ -93,6 +94,7 @@
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxStrokeColor="@color/green_40"
+                app:cursorColor="@color/green_40"
                 app:endIconTint="@color/green_40"
                 app:errorEnabled="true"
                 app:hintAnimationEnabled="false"
@@ -133,6 +135,7 @@
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxStrokeColor="@color/green_40"
+                app:cursorColor="@color/green_40"
                 app:endIconTint="@color/green_40"
                 app:errorEnabled="true"
                 app:hintAnimationEnabled="false"
@@ -174,6 +177,7 @@
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxStrokeColor="@color/green_40"
+                app:cursorColor="@color/green_40"
                 app:endIconTint="@color/green_40"
                 app:errorEnabled="true"
                 app:hintAnimationEnabled="false"
