--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -107,6 +107,7 @@
         <item name="boxCornerRadiusTopEnd">8dp</item>
         <item name="boxCornerRadiusTopStart">8dp</item>
         <item name="boxStrokeColor">@color/green_40</item>
+        <item name="cursorColor">@color/green_40</item>
         <item name="hintTextColor">@color/green_40</item>
     </style>
 
