--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,12 +49,24 @@
             app:iconifiedByDefault="false"
             app:queryHint="@string/search_organizer" />
 
-        <include
-            android:id="@+id/cv_search_organizer_location"
-            layout="@layout/item_dialog_search_organizer"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="24dp" />
+            android:layout_marginVertical="24dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:cardMaxElevation="4dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false">
+
+            <include
+                android:id="@+id/cv_search_organizer"
+                layout="@layout/item_dialog_search_organizer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             style="@style/TextBody.Medium.BodyLarge"
